--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<div class="heading-logo" style="padding-left: 2em;">
 				<a class="small-show" href="#intro">
 					<!-- <h1 style="font-size: 1.75em;">Honeycomb</h1> -->
-					<h1><img src="/images/logo.PNG" style="height: 1.25em; width: auto;" alt="Company Logo"></h1>
+					<h1><img src="images/logo.PNG" style="height: 1.25em; width: auto;" alt="Company Logo"></h1>
 				</a>
 			</div>
 			<nav>
