Change logo image in index

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 		<!-- Intro -->
 		<section id="intro" class="wrapper style1 fullscreen fade-up">
 			<div class="inner">
-				<img class="logo" src="/images/logo.PNG" alt="Company Logo">
+				<img class="logo" src="images/logo.PNG" alt="Company Logo">
 				<h1>Honeycomb Solutions</h1>
 				<p>
 					We build immersive and engaging experiences on all mobile platforms for all ages.
