--- a/toolsUtilities.html
+++ b/toolsUtilities.html
@@ -19,7 +19,7 @@
 
 	<!-- Header -->
 	<header id="header">
-		<a href="index.html" class="title"><img src="/images/logo.PNG" style="height: 1.75em; width: auto;"
+		<a href="index.html" class="title"><img src="images/logo.PNG" style="height: 1.75em; width: auto;"
 				alt="Company Logo"></a>
 		<nav>
 			<ul>
