Correct animation icon

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 					tasks and enrich their lives with our apps.</p>
 				<div class="features">
 					<section>
-						<span class="icon solid major"><i class="fa fa-running"></i></span>
+						<span class="icon solid major"><i class="fa fa-cog fa-spin"></i></span>
 						<h3>Animation</h3>
 						<p>Integrate animations that provide kids with exciting and innovative ways of learning, help
 							build up on concepts and visualize otherwise complex processes.</p>
