--- a/index.html
+++ b/index.html
@@ -136,27 +136,27 @@
 					tasks and enrich their lives with our apps.</p>
 				<div class="features">
 					<section>
-						<span class="icon solid major"><i class="fa fa-cog fa-spin fa-lg"></i></span>
+						<span class="icon solid major"><i class="fa fa-cog fa-spin fa-md" style="vertical-align: 25%"></i></span>
 						<h3>Animation</h3>
 						<p>Integrate animations that provide kids with exciting and innovative ways of learning, help
 							build up on concepts and visualize otherwise complex processes.</p>
 					</section>
 					<section>
-						<span class="icon solid major"><i class="fa fa-question fa-lg"></i></span>
+						<span class="icon solid major"><i class="fa fa-question fa-lg" style="vertical-align: 25%"></i></span>
 						<h3>Quizzes</h3>
 						<p>Develop quizzes and other interactive techniques that will be used to assess the progress
 							made in learning concerned concepts, while keeping the experience fun and engaging.
 						</p>
 					</section>
 					<section>
-						<span class="icon regular major"><i class="fa fa-play-circle fa-lg"></i></span>
+						<span class="icon regular major"><i class="fa fa-play-circle fa-lg" style="vertical-align: 25%"></i></span>
 						<h3>Videos</h3>
 						<p>Provide exposure to videos that provide real life examples of situations, events and
 							experiments that will
 							clarify and create a concrete understanding of concepts.</p>
 					</section>
 					<section>
-						<span class="icon solid major"><i class="fa fa-desktop fa-lg"></i></span>
+						<span class="icon solid major"><i class="fa fa-desktop fa-lg" style="vertical-align: 25%"></i></span>
 						<h3>Simulations</h3>
 						<p>Provide tools for simulation of challenging, risky and ideal scenarios that will further
 							enhance one's understanding of related topics.</p>
